base/utils/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-internal
  namespace: utils
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
        - name: nextcloud-forwarded-headers
        - name: nextcloud-securityheaders
        - name: nextcloud-redirectregex1
        - name: nextcloud-redirectregex2
        - name: nextcloud-compress
      services:
        - kind: Service
          name: nextcloud
          port: 80
    - kind: Rule
      match: Host(`home.my-homelab.party`)
      middlewares:
        - name: local-only
          namespace: infra
        - name: homelab-auth
          namespace: infra
      priority: 0
      services:
        - kind: Service
          name: homepage
          port: 3000
    - kind: Rule
      match: Host(`recipes.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: recipes
          port: http
    - kind: Rule
      match: Host(`immich.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: immich-server
          port: 2283
    - kind: Rule
      match: Host(`pricebuddy.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
        - name: homelab-auth
          namespace: infra
      services:
        - kind: Service
          name: pricebuddy
          port: http
